--- a/src/app/pages/login/components/signin/signin.component.html
+++ b/src/app/pages/login/components/signin/signin.component.html
@@ -1,19 +1,25 @@
 <div class="login-box" [formGroup]="loginForm">
-    
-    <h1>Logar</h1>
+  <h1>Logar</h1>
 
-  <br/>
+  <br />
 
-    <input type="text" placeholder="Email" formControlName="email" />
-    <br/>
+  <input type="text" placeholder="Email" formControlName="email" />
+  <br />
 
-    <input type="password" placeholder="Password" formControlName="senha" />
-
+  <input type="password" placeholder="Password" formControlName="senha" />
 
   <div>
-
-    <button (click)="enviarLogin()"class="btn" [disabled]="loginForm.invalid">Login </button>
-    
+    <button (click)="enviarLogin()" class="btn" [disabled]="loginForm.invalid">
+      Login
+    </button>
   </div>
+</div>
+<div class="erros">
+  @if(loginForm.invalid ){
 
+  {{ loginError() }}
+
+  {{ loginErr }}
+
+  }
 </div>
