--- a/src/estilos/signup-styles.scss
+++ b/src/estilos/signup-styles.scss
@@ -45,6 +45,7 @@
   color: #3e86cf;
   text-decoration: none;
 }
+
 .btn {
   //   display: block;
   border-radius: 25px;
@@ -73,4 +74,7 @@
 }
 .b1::selection {
   color: #f68511;
+}
+.erros  {
+  color: #aa1212;
 }
