--- a/src/estilos/modal-styles.scss
+++ b/src/estilos/modal-styles.scss
@@ -102,6 +102,7 @@ $orange-dark: #ff7300;
 .modalButtons {
   padding-top: 25px;
   display: inline-flex;
+
 }
 .modalButtons1 {
   background-color: #fafafa;
@@ -113,6 +114,9 @@ $orange-dark: #ff7300;
   width: 70px;
   margin: 0 60px 0 60px;
   margin-top: 10px;
+}
+.modalButtons2:disabled {
+display: none;
 }
 
 .modalButtons1:hover {
@@ -129,6 +133,9 @@ $orange-dark: #ff7300;
   width: 112px;
   margin-top: 10px;
   border-color: rgba(0, 0, 51, 0);
+  text-align: center;
+  display: flex; 
+  justify-content: center;
 }
 
 .modalButtons2:hover {
