mask format dos inputs

--- a/src/app/pages/login/components/signup/signup.component.html
+++ b/src/app/pages/login/components/signup/signup.component.html
@@ -7,9 +7,9 @@
   <input type="text" placeholder="Full Name" formControlName="nome" />
   <br />
 
-  <input type="text" placeholder="CPF" formControlName="cpf" />
+  <input type="text" mask="000.000.000-00" placeholder="CPF" formControlName="cpf" />
 
-  <input type="text" placeholder="Phone Number" formControlName="telefone" />
+  <input type="text" mask="(00)000000000"placeholder="Phone Number" formControlName="telefone" />
   <br />
  
   <input type="text" placeholder="Email" formControlName="email" />
