--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -111,9 +111,11 @@
           />
 
           }
+          <!-- {{  saldo | mask:"00" }} -->
 
-          {{  saldo  }}
-          
+          <!-- {{  saldo }} -->
+          {{  saldoFormat }}
+
         </li>
       </ul>
     </div>
