--- a/src/app/pages/menu/account/account.component.html
+++ b/src/app/pages/menu/account/account.component.html
@@ -1,1 +1,33 @@
-<p>account works!</p>
+<h2>Perfil</h2>
+
+<div class="container">
+  <div>
+    <form id="clienteForm">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required /><br />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required /><br />
+
+      <label for="senha">Senha:</label>
+      <input type="password" id="senha" name="senha" required /><br />
+    </form>
+  </div>
+  <br />
+  <div>
+    <form id="clienteForm">
+      <label for="conta">Conta:</label>
+      <input type="text" id="conta" name="conta" required /><br />
+
+      <label for="agencia">Agência:</label>
+      <input type="text" id="agencia" name="agencia" required /><br />
+
+      <label for="telefone">Telefone:</label>
+      <input type="text" id="telefone" name="telefone" required /><br />
+
+    </form>
+  </div>
+
+</div>  
+<input type="submit" value="Salvar Alterações" />
+
