Aviso de desinvolvimento

--- a/src/app/pages/menu/pix/pix.component.html
+++ b/src/app/pages/menu/pix/pix.component.html
@@ -28,18 +28,29 @@
         <li>
           <input
             type="button"
-            value="Copia e Cola"
+            value="Minhas Chaves"
             class="btn-pix2"
-            (click)="copiaColaPix()"
+            
           />
+          <div>1476194761094861</div>
+          <div>1749761948</div>
+          <div>ajhfljkfglfkahcmail.com</div>
+          <div>14352515</div>
+          <div>wrgrrrgdergrra</div>
+          <div>T42342353452fdsatry</div>
         </li>
         <li>
             <input
             type="button"
-            value="Copia e Cola"
+            value="Contatos"
             class="btn-pix2"
-            (click)="copiaColaPix()"
           />
+          <div>Deiverson Horizontino</div>
+          <div>Mario Steve Homer</div>
+          <div>Gohan Uzumaki</div>
+          <div>Naruto Sayjin</div>
+          <div>Jiraya Kakaroto</div>
+          <div>Tsunade Hyuga</div>
         </li>
       </ul>
     </div>
