--- a/src/app/loading/loading.component.scss
+++ b/src/app/loading/loading.component.scss
@@ -31,7 +31,7 @@ body {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    animation: spin 1s linear infinite;
+    animation: spin 1s reverse infinite;
   }
   
   @keyframes spin {
