--- a/src/app/pages/menu/sac/sac.component.scss
+++ b/src/app/pages/menu/sac/sac.component.scss
@@ -1,3 +1,171 @@
-h1{
-    color: white;
-  }
+// body{
+//   font-family: Arial, sans-serif;
+//   margin: 0;
+//   padding: 0;
+//   background-color:#000000;
+// background-size: cover;
+// }
+.topicos {
+  position: relative;
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 60%;
+}
+.topicos div {
+  text-align: center;
+}
+.texto {
+  width: 300px;
+  color: #f2f2f2;
+}
+.header {
+  height: 20vh;
+  width: 205vh;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #f17b0d00;
+  border-radius: 5px;
+  background-color: #7b828a;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 25px;
+  color: white;
+
+}
+.header h2{
+  color: white;
+
+}
+.container {
+  height: 65vh;
+  width: 205vh;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #f17b0d00;
+  border-radius: 5px;
+  background-color: #5a97d6;
+}
+.select-wrapper select {
+  //   display: inline-block;
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  width: 100%;
+  max-width: 400px; /* Ajuste o tamanho máximo do select conforme necessário */
+  height: 40px;
+  border-radius: 5px;
+  //   overflow: hidden;
+  padding: 10px;
+  background-color: #f2f2f2;
+  border: 1px solid #f17b0d00;
+  color: #5a97d6;
+  text-align: center;
+  //   background-color: transparent; 
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.select-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  color: white;
+}
+
+.search-bar {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #136fc5e5;
+  border: 1px solid #f17b0d00;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.search-bar input {
+  width: 90%;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.search-bar button {
+  width: 10%;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.chat-icon {
+
+  position: fixed;
+  bottom: 20px;
+  right: 50%;
+  transform: translateX(50%);
+  background-color: #007bff;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.chat-icon:hover{
+    background-color: #72b6ff;
+
+  cursor: pointer;
+}
+
+.chat {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  
+}
+.modal {
+  //   display: none;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+
+  background-color: rgba(0, 0, 0, 0.301);
+  height: 100%;
+  width: 100%;
+}
+.modalContent {
+  // position: fixed;
+  border-radius: 20px;
+  width: 715px;
+  height: 550px;
+  //   overflow: auto;
+  background-repeat: no-repeat;
+  background-image: url(./../../../../assets/images/Group\ 10chat.png);
+}
+.close {
+  color: #d10000;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-right: 15px;
+}
+.close:hover,
+.close:focus {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  cursor: pointer;
+}
