--- a/src/estilos/top-buttons-styles.scss
+++ b/src/estilos/top-buttons-styles.scss
@@ -1,19 +1,23 @@
 .container-about {
-    margin-top: 25px;
-    background-color: rgb(252, 240, 226);
-    border-radius: 25px;
-  
-    display: inline-flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  p {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    text-align: justify;
-    padding: 2%;
-  }
-  
+  margin-top: 25px;
+  background-color: rgb(252, 240, 226);
+  border-radius: 25px;
+  padding: 20px;
+
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.container-about img {
+  padding: 20px;
+  border-radius: 44px;
+}
+p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  text-align: justify;
+  padding: 20px;
+}
