cpf no comprovante

--- a/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
+++ b/src/app/pages/menu/pix/pix-modal-comprovante/pix-modal-comprovante.component.html
@@ -6,12 +6,12 @@
       <div class="inner-box">
         <a>De: {{ userService.usuario.getValue().nome_cliente }}</a>
         <a>Agencia: {{ agencia }}</a>
-        <a>CPF: {{ cpf }}</a>
+        <a>CPF: {{ perfilService.dados.getValue().cpf }}</a>
         <br />
         <a>Para: {{ nome }}</a>
         <a>Chave: {{ chave }}</a>
         <a>Agencia: {{ agencia }}</a>
-        <a>CPF: {{ cpf }}</a>
+        <!-- <a>CPF: {{ cpf }}</a> -->
 
         <br />
         <a>Valor {{ valor }} reais</a>
