--- a/src/app/pages/login/containers/login/login.component.html
+++ b/src/app/pages/login/containers/login/login.component.html
@@ -19,7 +19,8 @@
 
       <div class="container-login">
         <app-signin> </app-signin>
-        <a (click)="modificarCardLogin()">Nao Possui uma Conta Ainda?</a>
+        <a (click)="modificarCardLogin()">Nao Possui uma Conta Ainda? </a>
+        <a (click)="modificarCardLogin()">Recuperar Senha</a>
 
       </div>
 
