--- a/src/app/pages/login/components/signup/signup.component.html
+++ b/src/app/pages/login/components/signup/signup.component.html
@@ -15,7 +15,7 @@
   <input type="text" placeholder="Email" formControlName="email" />
   <br />
   
-  <input type="password" placeholder="Password" formControlName="senha" />
+  <input type="password" placeholder="Password: Can you change Later" [disabled]="true" />
 </div>
 
 <div style="justify-content: center; display: flex;">
